--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Screen Share</title>
-</head>
-<body>
-  <h1>Screen Sharing</h1>
-  <video id="screenVideo" autoplay playsinline style="width: 100%; max-width: 800px;"></video>
-
-  <script>
-    async function startScreenShare() {
-      try {
-        const stream = await navigator.mediaDevices.getDisplayMedia({ video: true });
-        document.getElementById('screenVideo').srcObject = stream;
-      } catch (err) {
-        alert("Error: " + err);
-      }
-    }
-    startScreenShare();
-  </script>
-</body>
-</html>
+const ws = new WebSocket('wss://sharescreenserver-toum.onrender.com');
