--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
-const ws = new WebSocket('wss://sharescreenserver-toum.onrender.com');
+<!DOCTYPE html>
+<html>
+<head><title>Screen Share</title></head>
+<body style="margin:0;">
+  <video id="video" autoplay playsinline style="width:100vw; height:100vh; object-fit:contain;"></video>
+
+  <script>
+    const ws = new WebSocket('wss://sharescreenserver-toum.onrender.com'); // Replace with your Render URL
+
+    let peerConnection;
+    const config = { iceServers: [{ urls: 'stun:stun.l.google.com:19302' }] };
+    const video = document.getElementById('video');
+
+    ws.onopen = () => {
+      const urlParams = new URLSearchParams(window.location.search);
+      const role = urlParams.get('role'); // role=broadcaster or viewer
+
+      if (role === 'broadcaster') {
+        startBroadcast();
+      } else {
+        startViewing();
+      }
+    };
+
+    ws.onmessage = async (message) => {
+      const data = JSON.parse(message.data);
+
+      if (data.type === 'new-viewer') {
+        // Broadcaster: create offer for new viewer
+        const offer = await peerConnection.createOffer();
+        await peerConnection.setLocalDescription(offer);
+        ws.send(JSON.stringify({ type: 'offer', sdp: offer.sdp }));
+      } else if (data.type === 'offer') {
+        // Viewer: receive offer, send answer
+        await peerConnection.setRemoteDescription(new RTCSessionDescription({ type: 'offer', sdp: data.sdp }));
+        const answer = await peerConnection.createAnswer();
+        await peerConnection.setLocalDescription(answer);
+        ws.send(JSON.stringify({ type: 'answer', sdp: answer.sdp }));
+      } else if (data.type === 'answer') {
+        // Broadcaster: receive answer
+        await peerConnection.setRemoteDescription(new RTCSessionDescription({ type: 'answer', sdp: data.sdp }));
+      } else if (data.type === 'candidate') {
+        try {
+          await peerConnection.addIceCandidate(data.candidate);
+        } catch(e) {
+          console.error('Error adding received ice candidate', e);
+        }
+      }
+    };
+
+    async function startBroadcast() {
+      ws.send(JSON.stringify({ type: 'broadcaster' }));
+
+      const stream = await navigator.mediaDevices.getDisplayMedia({ video: true });
+      video.srcObject = stream;
+
+      peerConnection = new RTCPeerConnection(config);
+      stream.getTracks().forEach(track => peerConnection.addTrack(track, stream));
+
+      peerConnection.onicecandidate = e => {
+        if (e.candidate) {
+          ws.send(JSON.stringify({ type: 'candidate', candidate: e.candidate }));
+        }
+      };
+    }
+
+    async function startViewing() {
+      ws.send(JSON.stringify({ type: 'viewer' }));
+
+      peerConnection = new RTCPeerConnection(config);
+
+      peerConnection.ontrack = event => {
+        video.srcObject = event.streams[0];
+      };
+
+      peerConnection.onicecandidate = e => {
+        if (e.candidate) {
+          ws.send(JSON.stringify({ type: 'candidate', candidate: e.candidate }));
+        }
+      };
+    }
+  </script>
+</body>
+</html>
